# lintactions

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  fails.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint-develop.yml  lint.yml
doc/: frja_setup.md  pylint.md
docs/: miluxina_setup.md
hooks/: linting_hook.sh  pylint_hook.py  pylint_hook.sh
scripts/: setup_venv_freja.sh  setup_venv_miluxina.sh
utils/: config.py
